# lattice_data_tools

./: .gitignore  CLAUDE.md  Dirac.py  LIBE.py  Makefile  README.md  __init__.py  analysis.py  artifacts.py  autodifferentiation.py  bootstrap.py  bootstrap_sampling.py  combine_fermionic_regularizations.py  constants.py  dictionaries.py  effective_curves.py  fit_xyey.py  generate_doc.py  gevp.py  io.py  jackknife.py  jackknifes.py  lambda_method.qmd  pyproject.toml  r0.py  sampling.py  scientific_notation.py  statistics.py  statistics_tools.py  symmetries.py  test-AIC.py  test-bts.py  uwerr.py
autodifferentiation/: with_torch_autograd_grad.py  with_torch_func_grad.py
doc/: .gitignore  Dirac.qmd  LIBE.qmd  Makefile  _quarto.yml  analysis.qmd  artifacts.qmd  biblio.bib  bootstrap.qmd  constants.qmd  dictionaries.qmd  effective_curves.qmd  fitting.qmd  gen_doc.py  generate_doc.qmd  generate_docs.qmd  gevp.qmd  index.qmd  io.qmd  jackknife.qmd  lambda_method.qmd  matching_LH.qmd  nested_sampling.qmd  nomenclature.qmd  r0.qmd  sampling.qmd  scientific_notation.qmd  software_stack.qmd  statistics.qmd  structure_of_project.qmd  symmetries.qmd  uwerr.qmd
experimental/: La_compiled-exp_and_CR.py  La_compiled.py  La_compiled_new.py  su3-La_trick.py
fit/: README.md  __init__.py  interpolate.py  trajectory.py  xiexiyey.py  xiexiyieyi.py  xiyey.py  xy.py  xyey.py
gm2/: __init__.py
links/: README.md  __init__.py  canonical_momenta.py  canonical_momenta_squared.py  configuration.py  lagevin.py  langevin.py  lie_derivatives.py  lie_derivatives_bkp.py  loops.py  sde.py  suN.py  (+1 more)
(+195 files in other folders)
