[project]
name = "lattice-data-tools"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "plotnine",
    "joblib",
    "pandas",
    "dill",
    "pyyaml",
]

[project.urls]
repository = "https://github.com/simone-itpkaon/lattice_data_tools"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = [
	     "Luescher_condition.py",
	     "covariance_matrix_bts.py"
	     ]
python_functions = ["test_*"]
addopts = "-v"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
